@startuml
title Parking Lot System

' ---------------- ENUMERATIONS ----------------
enum PaymentMethod {
  CASH
  CREDIT_CARD
}

enum PaymentStatus {
  PENDING
  SUCCESS
  FAILED
}

enum VehicleSize {
  SMALL
  MEDIUM
  LARGE
}

' ---------------- ABSTRACT CLASSES ----------------
abstract class Vehicle {
  - licensePlate: String
  - size: VehicleSize
  + getLicensePlate(): String
  + getSize(): VehicleSize
}

class Car
class Motorcycle
class Truck

Vehicle <|-- Car
Vehicle <|-- Motorcycle
Vehicle <|-- Truck

' ---------------- PARKING SPOTS ----------------
abstract class ParkingSpot {
  - spotNumber: int
  - isAvailable: boolean
  - vehicle: Vehicle
  + isAvailable(): boolean
  + occupy(vehicle: Vehicle): void
  + vacate(): void
  + getSpotNumber(): int
  + getSize(): VehicleSize
}

class RegularSpot
class HandicappedSpot

ParkingSpot <|-- RegularSpot
ParkingSpot <|-- HandicappedSpot

' ---------------- PARKING STRUCTURE ----------------
class ParkingFloor {
  - floorNumber: int
  - availableSpots: Map<VehicleSize, List<ParkingSpot>>
  + findSpotForVehicle(vehicle: Vehicle): Optional<ParkingSpot>
  + addSpot(spot: ParkingSpot): void
}

class ParkingLot {
  - parkingFloors: List<ParkingFloor>
  - fareCalculator: FareCalculator
  - paymentProcessors: Map<PaymentMethod, PaymentProcessor>
  + enterVehicle(vehicle: Vehicle): Ticket
  + exitVehicle(ticket: Ticket, method: PaymentMethod): Payment
  + findSpotForVehicle(vehicle: Vehicle): Optional<ParkingSpot>
}

ParkingLot --> ParkingFloor
ParkingFloor --> ParkingSpot
ParkingSpot --> Vehicle

' ---------------- GATES ----------------
class EntranceGate {
  - gateId: int
  - location: String
  - parkingLot: ParkingLot
  + enter(vehicle: Vehicle): Ticket
}

class ExitGate {
  - gateId: int
  - location: String
  - parkingLot: ParkingLot
  + exit(ticket: Ticket, method: PaymentMethod): Payment
}

EntranceGate --> ParkingLot
ExitGate --> ParkingLot

' ---------------- TICKETS & PAYMENTS ----------------
class Ticket {
  - ticketId: String
  - vehicle: Vehicle
  - parkingSpot: ParkingSpot
  - entryTime: LocalDateTime
  - exitTime: LocalDateTime
  + calculateParkingDuration(): BigDecimal
  + setExitTime(time: LocalDateTime): void
  + getEntryTime(): LocalDateTime
  + getExitTime(): LocalDateTime
  + generateTicket(): String
}

class Payment {
  - paymentId: String
  - amount: BigDecimal
  - method: PaymentMethod
  - status: PaymentStatus
  - timestamp: LocalDateTime
  + getAmount(): BigDecimal
  + getStatus(): PaymentStatus
  + updateStatus(newStatus: PaymentStatus): void
}

interface PaymentProcessor {
  + process(amount: BigDecimal): Payment
}

class CashPaymentProcessor
class CreditCardPaymentProcessor

PaymentProcessor <|.. CashPaymentProcessor
PaymentProcessor <|.. CreditCardPaymentProcessor
ParkingLot --> PaymentProcessor
Payment --> PaymentMethod
Payment --> PaymentStatus

' ---------------- FARE CALCULATION ----------------
class FareCalculator {
  - fareStrategies: List<FareStrategy>
  + calculateFare(ticket: Ticket): BigDecimal
}

interface FareStrategy {
  + calculateFare(ticket: Ticket, baseFare: BigDecimal): BigDecimal
}

class BaseFareStrategy {
  - RATE_MAP: Map<VehicleSize, BigDecimal>
  + calculateFare(ticket: Ticket, baseFare: BigDecimal): BigDecimal
}

class PeakHoursFareStrategy {
  - PEAK_HOURS_MULTIPLIER: BigDecimal
  + calculateFare(ticket: Ticket, baseFare: BigDecimal): BigDecimal
  + isPeakHour(time: LocalDateTime): boolean
}

FareStrategy <|.. BaseFareStrategy
FareStrategy <|.. PeakHoursFareStrategy
FareCalculator --> FareStrategy
ParkingLot --> FareCalculator
Ticket --> ParkingSpot
Ticket --> Vehicle

@enduml